--- a/software.html
+++ b/software.html
@@ -3,6 +3,6 @@ layout: page
 title: software
 ---
 
-{% for post in site.categories.software %}
+{% for post in site.tags.software %}
  <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
