--- a/updates.html
+++ b/updates.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: braindump
+title: updates
 ---
 
-{% for post in site.tags.braindump %}
+{% for post in site.tags.updates %}
  <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
