--- a/braindump.html
+++ b/braindump.html
@@ -3,6 +3,6 @@ layout: page
 title: braindump
 ---
 
-{% for post in site.tags.braindump %}
+{% for post in site.categories.braindump %}
  <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
