--- a/testing.html
+++ b/testing.html
@@ -3,6 +3,6 @@ layout: page
 title: testing
 ---
 
-{% for post in site.tags.testing %}
+{% for post in site.categories.testing %}
  <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
