--- a/updates.html
+++ b/updates.html
@@ -3,6 +3,6 @@ layout: page
 title: updates
 ---
 
-{% for post in site.tags.updates %}
+{% for post in site.categories.updates %}
  <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
