--- a/writeups.html
+++ b/writeups.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: reviews
+title: writeups
 ---
 
-{% for post in site.categories.reviews %}
+{% for post in site.categories.writeups %}
  <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
