--- a/null.html
+++ b/null.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: testing
+title: dev/null
 ---
 
-{% for post in site.categories.testing %}
+{% for post in site.categories.null %}
  <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
