--- a/random.html
+++ b/random.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: braindump
+title: dev/random
 ---
 
-{% for post in site.categories.braindump %}
+{% for post in site.categories.random %}
  <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
